# Guidance-System

./: README.md
launch/: darknet.launch  rtabmap.launch  turtlebot3_slam_3d.launch  turtlebot3_zed_bringup.launch  zedm.launch
scripts/: detection_collector.py  detection_publisher.py  label_image.py  main.py  maze.py  particle_gen.py  update_particles.py
visguide/: CMakeLists.txt  package.xml
visguide/launch/: PathPlanning.launch  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  landmark.launch  local_costmap_params.yaml  rtabMap.launch  rtabMap_0.launch  visguide.launch  zedm.launch
visguide/launch/stereo/: RtabMap_stereo.launch  stereo.launch  visguide_stereo.launch  zedm_stereo.launch
visguide/scripts/: cloud_to_2d.py
visguide/scripts/semantic-segmentation-pytorch/: dataset.py  demo_test.sh  segment.py  train.py
visguide/scripts/semantic-segmentation-pytorch/ckpt/baseline-resnet18dilated-c1_deepsup/: decoder_epoch_2.pth
visguide/scripts/semantic-segmentation-pytorch/lib/utils/data/: dataloader.py
visguide/scripts/semantic-segmentation-pytorch/models/: models.py
visguide/src/: Sound_comm.cpp  cloud_trav.cpp  plan_to_text.cpp
